--- a/views/admin/inc/_nav.pug
+++ b/views/admin/inc/_nav.pug
@@ -88,12 +88,12 @@
             </a>
             <ul class="children collapse" id="product-menu">
                 <li>
-                    <a class="" href="#">
+                    <a class="" href="addproduct">
                         <span class="fa fa-arrow-right">&nbsp;</span> Add Product
                     </a>
                 </li>
                 <li>
-                    <a class="" href="#">
+                    <a class="" href="listproduct">
                         <span class="fa fa-arrow-right">&nbsp;</span> List Products
                     </a>
                 </li>
