--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -7,10 +7,13 @@ html
         <link href='backend/css/bootstrap.min.css' rel='stylesheet'>
         <link href='backend/css/font-awesome.min.css' rel='stylesheet'>
         <link href='backend/css/datepicker3.css' rel='stylesheet'>
+        <link href='backend/css/component-custom-switch.min.css' rel='stylesheet'>
         <link href='backend/css/styles.css' rel='stylesheet'>
 
         //- <!--Custom Font-->
         <link href='https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i' rel='stylesheet'>
+        <script src="https://cdn.ckeditor.com/4.13.0/standard/ckeditor.js"></script>
+
     body
         include inc/_nav
 
@@ -19,12 +22,14 @@ html
         </div>
 
 
-        <script src='backend/js/jquery-1.11.1.min.js'></script>
+        //- <script src='backend/js/jquery-1.11.1.min.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src='backend/js/bootstrap.min.js'></script>
         <script src='backend/js/chart.min.js'></script>
         <script src='backend/js/chart-data.js'></script>
         <script src='backend/js/easypiechart.js'></script>
         <script src='backend/js/easypiechart-data.js'></script>
         <script src='backend/js/bootstrap-datepicker.js'></script>
+        <script src='backend/js/event.js'></script>
         <script src='backend/js/custom.js'></script>
         
