--- a/views/register.pug
+++ b/views/register.pug
@@ -15,6 +15,10 @@ block content
                         <label for="ip_lastname">Last name</label>
                         <input type="text" class="form-control" id="ip_lastname" placeholder="Last name">
                     </div>
+                    <div class="form-group col-md-12">
+                        <label for="ip_username">Username</label>
+                        <input type="text" class="form-control" id="ip_username" placeholder="Username">
+                    </div>
                     <div class="form-group col-md-6">
                         <label for="ip_password">Password</label>
                         <input type="password" class="form-control" id="ip_password" placeholder="Password">
